Arreglando el home.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
 
         <div class="home__info">
 
-          <p class="home__description">Soy desarrallodor Web apasionado por la tecnologia y programación.</p>
+          <p class="home__description">Soy un desarrallodor Web apasionada por la tecnología y programación.
+            <br>
+            Lorem ipsum
+            dolor sit amet consectetur adipisicing elit.
+          </p>
         </div>
 
         <div class="home__buttons">
